data/all_generated_tests/raw_wast_tests/block_InfiniteLoops_2134.wast
;; 5. **Test Description**: Use a `block` combined with `loop` and `br_if` where unmet conditions ensure continued loop execution unless the block type enforces early termination correctly.    - **Constraint**: Tests correct `br_if` condition handling and checking that block structure prevents infinite looping.

(assert_invalid
  (module (func $block-loop-br_if
    (result i32)
    (block (result i32)
      (loop (result i32)
        (i32.const 1)
        (br_if 1 (i32.const 0))
        (br 0)
      )
      (i32.const 2)
    )
  ))
  "type mismatch"
)